# pixelpack

./: Cargo.toml  Dockerfile  Gimbal_snowflake_small_and_flat.STL  LICENSE.md  README.md  docker_build.sh
cli/: Cargo.toml
cli/src/: main.rs  request.rs
pixelpack-lib/: Cargo.toml
pixelpack-lib/src/: lib.rs  plater.rs
pixelpack-lib/src/plater/: bitmap.rs  part.rs  placed_part.rs  placement.rs  placer.rs  plate.rs  plate_shape.rs  point.rs  request.rs  solution.rs  spiral.rs
pixelpack-lib/src/plater/placer/: strategies.rs
pixelpack-lib/src/stl/: model.rs  model_io.rs  part.rs  point_3d.rs  request.rs  volume.rs
src/: lib.rs  main.rs  plater.rs  stl.rs
src/cmd/: request.rs
src/plater/: bitmap.rs  part.rs  placed_part.rs  placement.rs  placer.rs  plate.rs  plate_shape.rs  point.rs  progress.rs  progress_config.rs  recommender.rs  rectangle.rs  request.rs  solution.rs  spiral.rs  util.rs
src/plater/execution_mode/: async_js_runner.rs  mod.rs  multi_threaded_runner.rs  single_threaded_runner.rs  threading_mode.rs
src/plater/placer/: helpers.rs  rect.rs  score.rs  search.rs  strategies.rs
src/stl/: face.rs  model.rs  model_io.rs  orientation.rs  part.rs  point_3d.rs  quad_tree.rs  request.rs  triangle_2d.rs  util.rs  volume.rs
src/wasm/: request.rs
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs  request.rs
