[package]
name = "pixelpack"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.10.3"
rayon = "1.5.3"
byteorder = "1"
anyhow = "1.0.66"
log = "0.4.17"
simple_logger = "2.3.0"
thiserror = "1.0.38"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
