[package]
name = "pixelpack"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.12.1"
rayon = "1.5.3"
byteorder = "1"
anyhow = "1.0.66"
log = "0.4.17"
simple_logger = "4.3.3"
thiserror = "1.0.38"
gloo-timers = { version = "0.3.0", features = ["futures"] }
futures = { version = "0.3.29", features = ["async-await"] }
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
