[package]
name = "pixelpack-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
thiserror = "1.0.24"
anyhow = "1.0.66"
wasm-bindgen = "0.2.63"
log = "0.4.17"
simple_logger = "2.3.0"
pixelpack = {path = "../pixelpack-lib"}
serde-wasm-bindgen = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.60"
console_error_panic_hook = { version = "0.1.6", optional = true }
getrandom = { version = "0.2", features = ["js"] }
console_log = "0.2.0"
typeshare = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false